XEP-0308 / XEP-0424 OpenSearch index update support